# bbcat-control

./: CMakeLists.txt  Makefile.am  README  configure.ac
debian/: changelog  control
src/: AudioObject.h  AudioObjectCursor.h  AudioObjectParameters.cpp  AudioObjectParameters.h  CMakeLists.txt  Makefile.am
